test/parallel/taskPar/taskIntents/errorAccessRecordField.compopts
-stest=1 # errorAccessRecordField.1.good
-stest=2 # errorAccessRecordField.2.good
